animation, about page

--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     {% include "includes/nav.html" %}
 </head>
 <body>
+<br>
+
+
+<div id="info">
+
+    <h1>Hey there! My name is Sherry Liu.</h1>
+    <p>I'm currently a student at the North Carolina School of Science and Math who is excited about solving problems
+        with technology. I've been messing around with code since around eighth grade, but I only recently started
+        getting into web and app development, machine learning, competative programming, and data science. I made this
+        website as a place
+        to dump all of my programming projects, and hope to keep it updated as I explore the realm of computer science.</p>
+
+    <p>Aside from programming, some of my hobbies include writing, guitar, and reading way too many startup memoirs. I also
+        run the nonprofit Peer2Peer Charlotte. Cheezits are better than goldfish, The Office is overrated, and DFTBA.</p>
+    <button onClick="parent.open('https://docs.google.com/document/d/1Ikb7oxFdbBsyk-uYsWWsVuqChfX56R0_iybJ5N3TZWc/edit?usp=sharing')">Resume</button>
+    <button onClick="parent.open('https://github.com/sherryliu987')">Github</button>
+
+
+</div>
 
 </body>
 </html>
