--- a/application/static/css/home.css
+++ b/application/static/css/home.css
@@ -1,24 +1,15 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+* {
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
 }
 
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-    background-color: #111;
+#canvas1{
+    position:relative;
+    top:0; left:0;
+    width:100%;
+    height:100%;
+    margin:0px;
+    border:0;
+    background:radial-gradient(#34626c, #b4d4cb);
 }
