--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -1,6 +1,6 @@
 <header>
 
-    <link rel="stylesheet" href="../static/css/home.css">
+    <link rel="stylesheet" href="../static/css/header.css">
 
     <nav>
         <ul>
