--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About</title>
+    <link rel="stylesheet" href="../static/css/about.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     {% include "includes/nav.html" %}
 </head>
 <body>
 <br>
 
+<div class="parallax"></div>
 
 <div id="info">
 
@@ -20,7 +22,7 @@
         to dump all of my programming projects, and hope to keep it updated as I explore the realm of computer science.</p>
 
     <p>Aside from programming, some of my hobbies include writing, guitar, and reading way too many startup memoirs. I also
-        run the nonprofit Peer2Peer Charlotte. Cheezits are better than goldfish, The Office is overrated, and DFTBA.</p>
+        run the nonprofit Peer2Peer Charlotte.</p>
     <button onClick="parent.open('https://docs.google.com/document/d/1Ikb7oxFdbBsyk-uYsWWsVuqChfX56R0_iybJ5N3TZWc/edit?usp=sharing')">Resume</button>
     <button onClick="parent.open('https://github.com/sherryliu987')">Github</button>
 
