--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -2,17 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Home</title>
     <link rel="stylesheet" href="../static/css/home.css">
     {% include "includes/nav.html" %}
 </head>
 <body>
-
-
-
 <canvas id="canvas1"></canvas>
-<script src="../static/script.js"></script>
-<h1>WELCOME TO MY PERSONAL WEBSITE</h1>
-<p1>i dO jAvA hehe i'm so quirky</p1>
+<script src="../static/scripts/script.js"></script>
 </body>
 </html>
