--- a/application/static/css/home.css
+++ b/application/static/css/home.css
@@ -6,10 +6,9 @@
 
 #canvas1{
     position:relative;
-    top:0; left:0;
+    top:45px; left:0;
     width:100%;
     height:100%;
-    margin:0px;
-    border:0;
     background:radial-gradient(#34626c, #b4d4cb);
 }
+
