--- a/application/templates/blog.html
+++ b/application/templates/blog.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Blog</title>
     {% include "includes/nav.html" %}
 </head>
 <body>
-
+    <video>
+        <source src="blog_video.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
